--- a/MyWeiBo/MyWeiBo/Base.lproj/Main.storyboard
+++ b/MyWeiBo/MyWeiBo/Base.lproj/Main.storyboard
@@ -19,11 +19,40 @@
                         <segue destination="rv1-pJ-gpE" kind="relationship" relationship="viewControllers" id="LUc-m8-1E3"/>
                         <segue destination="2fM-4f-KaT" kind="relationship" relationship="viewControllers" id="8ez-sq-MFy"/>
                         <segue destination="uVf-ew-EkM" kind="relationship" relationship="viewControllers" id="hAQ-tc-EJE"/>
+                        <segue destination="r4l-KL-Glv" kind="relationship" relationship="viewControllers" id="lZR-Zg-nGp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-86.5" y="-214.5"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Gdh-9K-lmw">
+            <objects>
+                <viewController id="r4l-KL-Glv" customClass="OAuthWebViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Dw4-18-X4E"/>
+                        <viewControllerLayoutGuide type="bottom" id="aoW-17-RDI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="oGb-sZ-fvf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EVo-1D-Wne">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Z7j-T5-vJQ"/>
+                    <connections>
+                        <outlet property="webView" destination="EVo-1D-Wne" id="cpx-Ja-zJ2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AAM-hK-4ww" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="427.5" y="-214.5"/>
         </scene>
         <!--首页-->
         <scene sceneID="9Za-uE-eM4">
