--- a/MyWeiBo/MyWeiBo/Base.lproj/Main.storyboard
+++ b/MyWeiBo/MyWeiBo/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <segue destination="2fM-4f-KaT" kind="relationship" relationship="viewControllers" id="8ez-sq-MFy"/>
                         <segue destination="xAl-er-RBK" kind="relationship" relationship="viewControllers" id="3GR-DL-GWL"/>
                         <segue destination="uVf-ew-EkM" kind="relationship" relationship="viewControllers" id="hAQ-tc-EJE"/>
-                        <segue destination="r4l-KL-Glv" kind="relationship" relationship="viewControllers" id="lZR-Zg-nGp"/>
+                        <segue destination="vL6-6Y-Wf8" kind="relationship" relationship="viewControllers" id="pj7-r0-OjP"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -29,6 +29,59 @@
             <point key="canvasLocation" x="-86.5" y="-214.5"/>
         </scene>
         <!--我-->
+        <scene sceneID="vik-xT-jrW">
+            <objects>
+                <navigationController id="vL6-6Y-Wf8" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我" image="tabbar_profile" id="MJo-XF-auu"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vw8-0j-k2J">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="oD6-Mp-PS0" kind="relationship" relationship="rootViewController" id="Xm4-Tc-I1W"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r8H-4Q-cHS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="369.5" y="-214.5"/>
+        </scene>
+        <!--我-->
+        <scene sceneID="Rae-90-xIE">
+            <objects>
+                <tableViewController id="oD6-Mp-PS0" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="yRh-2J-FHN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="K4F-PC-yN0">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="K4F-PC-yN0" id="IY2-zR-iFC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oD6-Mp-PS0" id="rzF-R5-qNm"/>
+                            <outlet property="delegate" destination="oD6-Mp-PS0" id="iff-MR-egS"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="我" id="Dlk-i9-lux">
+                        <barButtonItem key="rightBarButtonItem" title="授权" id="BHZ-yn-sDw">
+                            <connections>
+                                <segue destination="r4l-KL-Glv" kind="push" id="IES-QM-czj"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l3q-sV-IEC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="823.5" y="-214.5"/>
+        </scene>
+        <!--授权-->
         <scene sceneID="Gdh-9K-lmw">
             <objects>
                 <viewController id="r4l-KL-Glv" customClass="OAuthWebViewController" sceneMemberID="viewController">
@@ -41,20 +94,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EVo-1D-Wne">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="我" image="tabbar_profile" id="Z7j-T5-vJQ"/>
+                    <navigationItem key="navigationItem" title="授权" id="1xj-sk-2NW"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="webView" destination="EVo-1D-Wne" id="cpx-Ja-zJ2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AAM-hK-4ww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="427.5" y="-214.5"/>
+            <point key="canvasLocation" x="1247.5" y="-214.5"/>
         </scene>
         <!--首页-->
         <scene sceneID="9Za-uE-eM4">
